--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <script src="https://kit.fontawesome.com/da1adf1aba.js" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <meta charset="utf-8">
   <title>Apt</title>
   <base href="/">
